# cockroachdb-mcp-server

./: .gitignore  404.html  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  python-ci.yml
api/: index.html
app/: main.py
app/routes/: contexts.py  health.py
cockroachdb_mcp_server/: __init__.py  __main__.py  cli.py  config.py  init.sql  logging_config.py  main.py  schema_init.py  server.py
cockroachdb_mcp_server/db/: db_connection.py
cockroachdb_mcp_server/models/: context.py
cockroachdb_mcp_server/routes/: contexts.py  debug.py
docs/: api.md  index.md
search/: search_index.json
tests/: test_debug.py  test_health.py
